# spreadsheet_splitter

./: .gitignore  README.md  pyproject.toml  split_log.json
docs/: installation.md
split_files/: iNVKSA_part001.xlsx
