[project]
name = "spreadsheet-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pyexcelerate>=0.13.0",
    "xlrd>=2.0.1",
    "xlwt>=1.3.0",
]

[project.scripts]
spreadsheet-splitter = "spreadsheet_splitter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
